RDM-10431 - Extra unit tests